<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_config">
        <ListPreference
            android:title="@string/pref_interval_title"
            android:summary="@string/pref_interval_summary"
            android:key="@string/pref_interval_key"
            android:icon="@drawable/ic_baseline_content_cut_24"
            android:entries="@array/interval_entries"
            android:entryValues="@array/interval_values"
            android:defaultValue="259200000" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_about">
        <Preference
            android:title="@string/pref_developer_title"
            android:summary="@string/pref_developer_summary"
            android:key="@string/pref_developer_key"
            android:icon="@drawable/ic_baseline_person_pin_24" />
        <Preference
            android:title="@string/pref_source_title"
            android:summary="@string/pref_source_summary"
            android:key="@string/pref_source_key"
            android:icon="@drawable/ic_baseline_code_24" />
        <Preference
            android:title="@string/pref_contact_title"
            android:summary="@string/pref_contact_summary"
            android:key="@string/pref_contact_key"
            android:icon="@drawable/ic_baseline_email_24" />
        <Preference
            android:title="@string/pref_licenses_title"
            android:summary="@string/pref_licenses_summary"
            android:key="@string/pref_licenses_key"
            android:icon="@drawable/ic_baseline_insert_drive_file_24" />
    </PreferenceCategory>
</PreferenceScreen>